cmake_minimum_required(VERSION 3.7)
project(RoboRobo)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        config/20130508.08h54m11s.6605.properties
        config/20130508.09h45m28s.7997.properties
        config/20130508.09h46m40s.29824.properties
        config/20130508.09h50m04s.21505.properties
        config/20130508.10h18m06s.3186.properties
        config/20131009.08h59m26s.13087.properties
        config/20131009.09h01m36s.29108.properties
        config/20131009.09h01m59s.11194.properties
        config/20131009.09h03m05s.19525.properties
        config/20131009.09h04m55s.13118.properties
        config/test.prop
        config/ToIndigo.properties
        config/ToSteelBlue.properties
        data/_templates/agent-full.psd
        data/_templates/parcours.psd
        data/_templates/scale_zones.psd
        data/_templates/scale_zones_2.psd
        data/_templates/zone.psd
        data/agent-mask-new.png
        data/agent-mask-old.png
        data/agent-mask.png
        data/agent-negative-mask.png
        data/agent-positive-mask.png
        data/agent-specs.png
        data/box1.png
        data/box1_zones.png
        data/box2.png
        data/box2_zones.png
        data/box3-4.png
        data/box3.png
        data/box4-4.png
        data/box4-4_zones.png
        data/box4.png
        data/box4_2x2.png
        data/box4_4x4.png
        data/box4_6x6.png
        data/box4_zones.png
        data/box4_zones_2x2.png
        data/box4_zones_4x4.png
        data/box4_zones_6x6.png
        data/box5.png
        data/box5_zones.png
        data/cave.png
        data/cave_zones.png
        data/danger_background.png
        data/danger_environment.png
        data/danger_foreground.png
        data/danger_template.psd
        data/danger_zones.png
        data/default_background.png
        data/default_environment.png
        data/default_foreground.png
        data/default_zones.png
        data/miniagent-mask.png
        data/miniagent-specs.png
        data/parcours_background.png
        data/parcours_background_riverbed.png
        data/parcours_environment.png
        data/parcours_environment_riverbed.png
        data/parcours_foreground.png
        data/parcours_foreground_riverbed.png
        data/parcours_zones.png
        data/parcours_zones_riverbed.png
        data/riverbed_environment.png
        data/riverbed_environment_large.png
        data/riverbed_foreground.png
        data/riverbed_foreground_large.png
        data/scale_environment.png
        data/scale_foreground.png
        data/simple_background_2.png
        data/simple_environment_2.png
        data/simple_environment_2.xcf
        data/simple_foreground_2.png
        data/simple_zones_2.png
        data/zonecaption001.jpg
        include/contrib/LioLib/liobehaviorlib/behaviors/PerceptronBehavior.h
        include/contrib/LioLib/liobehaviorlib/behaviors/WallAvoidanceBehavior.h
        include/contrib/LioLib/liobehaviorlib/src/PerceptronBehavior.cpp
        include/contrib/LioLib/liobehaviorlib/src/PerceptronBehavior.o
        include/contrib/LioLib/liobehaviorlib/src/WallAvoidanceBehavior.cpp
        include/contrib/LioLib/liobehaviorlib/src/WallAvoidanceBehavior.o
        include/contrib/LioLib/liogenetics/genetics/AveragingCrossover.h
        include/contrib/LioLib/liogenetics/genetics/BalanceFitnessWebots.h
        include/contrib/LioLib/liogenetics/genetics/Chasing.h
        include/contrib/LioLib/liogenetics/genetics/CollectiveForaging.h
        include/contrib/LioLib/liogenetics/genetics/CollectivePatrolling.h
        include/contrib/LioLib/liogenetics/genetics/CompleteMutator.h
        include/contrib/LioLib/liogenetics/genetics/definitions.h
        include/contrib/LioLib/liogenetics/genetics/DominanceCompare.h
        include/contrib/LioLib/liogenetics/genetics/EMeans.h
        include/contrib/LioLib/liogenetics/genetics/EnergyCollection.h
        include/contrib/LioLib/liogenetics/genetics/ESRealMutation.h
        include/contrib/LioLib/liogenetics/genetics/Evolver.h
        include/contrib/LioLib/liogenetics/genetics/FastForwardWithBattery.h
        include/contrib/LioLib/liogenetics/genetics/FixedLinearChromosome.h
        include/contrib/LioLib/liogenetics/genetics/GeneticConfig.h
        include/contrib/LioLib/liogenetics/genetics/Genome.h
        include/contrib/LioLib/liogenetics/genetics/LogNormalSigma.h
        include/contrib/LioLib/liogenetics/genetics/MutationRates.h
        include/contrib/LioLib/liogenetics/genetics/NeuralNetGenome.h
        include/contrib/LioLib/liogenetics/genetics/ObstacleAvoidanceFitnessD3D.h
        include/contrib/LioLib/liogenetics/genetics/ObstacleAvoidanceFitnessPlayerStage.h
        include/contrib/LioLib/liogenetics/genetics/ObstacleAvoidanceFitnessWebots.h
        include/contrib/LioLib/liogenetics/genetics/OnePointCrossover.h
        include/contrib/LioLib/liogenetics/genetics/Phototaxis.h
        include/contrib/LioLib/liogenetics/genetics/PointMutator.h
        include/contrib/LioLib/liogenetics/genetics/RandomInitialiser.h
        include/contrib/LioLib/liogenetics/genetics/RealMutation.h
        include/contrib/LioLib/liogenetics/genetics/SeedInitializer.h
        include/contrib/LioLib/liogenetics/genetics/SphereFitness.h
        include/contrib/LioLib/liogenetics/genetics/StateVector.h
        include/contrib/LioLib/liogenetics/genetics/StructuredGene.h
        include/contrib/LioLib/liogenetics/genetics/TournamentSelection.h
        include/contrib/LioLib/liogenetics/genetics/UniformCrossover.h
        include/contrib/LioLib/liogenetics/src/AveragingCrossover.cpp
        include/contrib/LioLib/liogenetics/src/Chasing.cpp
        include/contrib/LioLib/liogenetics/src/CollectiveForaging.cpp
        include/contrib/LioLib/liogenetics/src/CollectivePatrolling.cpp
        include/contrib/LioLib/liogenetics/src/CompleteMutator.cpp
        include/contrib/LioLib/liogenetics/src/DominanceCompare.cpp
        include/contrib/LioLib/liogenetics/src/EMeans.cpp
        include/contrib/LioLib/liogenetics/src/EnergyCollection.cpp
        include/contrib/LioLib/liogenetics/src/ESRealMutation.cpp
        include/contrib/LioLib/liogenetics/src/Evolver.cpp
        include/contrib/LioLib/liogenetics/src/FastForwardWithBattery.cpp
        include/contrib/LioLib/liogenetics/src/Genome.cpp
        include/contrib/LioLib/liogenetics/src/NeuralNetGenome.cpp
        include/contrib/LioLib/liogenetics/src/ObstacleAvoidanceFitnessD3D.cpp
        include/contrib/LioLib/liogenetics/src/ObstacleAvoidanceFitnessPlayerStage.cpp
        include/contrib/LioLib/liogenetics/src/ObstacleAvoidanceFitnessWebots.cpp
        include/contrib/LioLib/liogenetics/src/OnePointCrossover.cpp
        include/contrib/LioLib/liogenetics/src/Phototaxis.cpp
        include/contrib/LioLib/liogenetics/src/PointMutator.cpp
        include/contrib/LioLib/liogenetics/src/SphereFitness.cpp
        include/contrib/LioLib/liogenetics/src/StateVector.cpp
        include/contrib/LioLib/liogenetics/src/TournamentSelection.cpp
        include/contrib/LioLib/liogenetics/src/UniformCrossover.cpp
        include/contrib/LioLib/liogenetics/README
        include/contrib/LioLib/lioneuralnet/activationfunctions/ActivationFunctionLinear.h
        include/contrib/LioLib/lioneuralnet/activationfunctions/ActivationFunctionPiecewiseLinearTanh.h
        include/contrib/LioLib/lioneuralnet/activationfunctions/ActivationFunctionSigmoid.h
        include/contrib/LioLib/lioneuralnet/activationfunctions/ActivationFunctionTanh.h
        include/contrib/LioLib/lioneuralnet/neuralnets/MultiLayeredPerceptron.h
        include/contrib/LioLib/lioneuralnet/neuralnets/SimplePerceptron.h
        include/contrib/LioLib/lioneuralnet/src/ActivationFunctionLinear.cpp
        include/contrib/LioLib/lioneuralnet/src/ActivationFunctionLinear.o
        include/contrib/LioLib/lioneuralnet/src/ActivationFunctionPiecewiseLinearTanh.cpp
        include/contrib/LioLib/lioneuralnet/src/ActivationFunctionPiecewiseLinearTanh.o
        include/contrib/LioLib/lioneuralnet/src/ActivationFunctionSigmoid.cpp
        include/contrib/LioLib/lioneuralnet/src/ActivationFunctionSigmoid.o
        include/contrib/LioLib/lioneuralnet/src/ActivationFunctionTanh.cpp
        include/contrib/LioLib/lioneuralnet/src/ActivationFunctionTanh.o
        include/contrib/LioLib/lioneuralnet/src/MultiLayeredPerceptron.cpp
        include/contrib/LioLib/lioneuralnet/src/MultiLayeredPerceptron.o
        include/contrib/LioLib/lioneuralnet/src/SimplePerceptron.cpp
        include/contrib/LioLib/lioneuralnet/src/SimplePerceptron.o
        include/contrib/LioLib/lioutilities/lioutils/assert.h
        include/contrib/LioLib/lioutilities/lioutils/Bounds.h
        include/contrib/LioLib/lioutilities/lioutils/Fixed32.h
        include/contrib/LioLib/lioutilities/lioutils/lio_global.h
        include/contrib/LioLib/lioutilities/lioutils/LIOUtilities.h
        include/contrib/LioLib/lioutilities/lioutils/Mathlib.h
        include/contrib/LioLib/lioutilities/lioutils/Misc.h
        include/contrib/LioLib/lioutilities/src/Bounds.cpp
        include/contrib/LioLib/lioutilities/src/Bounds.o
        include/contrib/LioLib/lioutilities/src/Fixed32.cpp
        include/contrib/LioLib/lioutilities/src/Fixed32.o
        include/contrib/LioLib/lioutilities/src/LIOUtilities.cpp
        include/contrib/LioLib/lioutilities/src/LIOUtilities.o
        include/contrib/LioLib/lioutilities/src/Mathlib.cpp
        include/contrib/LioLib/lioutilities/src/Mathlib.o
        include/contrib/LioLib/lioutilities/src/Misc.cpp
        include/contrib/LioLib/lioutilities/src/Misc.o
        include/contrib/LioLib/readme.txt
        include/contrib/newscast/HiveMindInstance.h
        include/contrib/newscast/NewscastAgent.h
        include/contrib/newscast/NewscastAgentGroup.h
        include/contrib/newscast/NewscastInstance.h
        include/contrib/newscast/NewsContent.h
        include/contrib/newscast/NewsItem.h
        include/contrib/newscast/PopulationControlArchitecture.h
        include/contrib/newscast/PopulationMember.h
        include/contrib/zsu/func.h
        include/contrib/zsu/Properties.h
        include/contrib/zsu/StringUtils.h
        include/contrib/zsu/strip.h
        include/contrib/Organism.h
        include/contrib/SDL_collide.h
        include/core/Agents/Agent.h
        include/core/Agents/InspectorAgent.h
        include/core/Agents/RobotAgent.h
        include/core/BehaviorControlArchitectures/BehaviorControlArchitecture.h
        include/core/Config/ConfigurationLoader.h
        include/core/Config/GlobalConfigurationLoader.h
        include/core/Observers/AgentObserver.h
        include/core/Observers/Observer.h
        include/core/Observers/WorldObserver.h
        include/core/RoboroboMain/common.h
        include/core/RoboroboMain/main.h
        include/core/RoboroboMain/roborobo.h
        include/core/Utilities/ExtendedProperties.h
        include/core/Utilities/LogManager.h
        include/core/Utilities/Misc.h
        include/core/Utilities/SDL_gfxPrimitives.h
        include/core/Utilities/SDL_gfxPrimitives_font.h
        include/core/Utilities/SDL_gfxPrimitivesExtra.h
        include/core/Utilities/SDL_gfxRoborobo.h
        include/core/Utilities/SDLMain.h
        include/core/Utilities/Timer.h
        include/core/World/RobotAgentWorldInterface.h
        include/core/World/World.h
        include/core/WorldModels/RobotAgentWorldModel.h
        include/core/WorldModels/WorldModel.h
        include/ext/BehaviorControlArchitectures/PerceptronBehaviorControlArchitecture.h
        include/ext/Config/PropertiesReadingConfigurationLoader.h
        include/ext/Config/SimpleShellsConfigurationLoader.h
        include/ext/rjh/DifferentialControlArchitecture.h
        include/ext/rjh/EvolutionaryControlArchitecture.h
        include/ext/Utils/Controller.h
        include/ext/Utils/NeuralController.h
        include/ext/Utils/Rand.h
        include/ext/Utils/Util.h
        include/ext/World/Puck.h
        include/ext/World/PuckGen.h
        include/ext/World/RobotAgentWorldInterfaceDangerWorld.h
        include/ext/WorldModels/EvolvingRobotAgentWorldModel.h
        include/ext/WorldModels/EvolvingRobotAgentWorldModelDangerWorld.h
        include/ext/RangeSensor.h
        logs/a.sh.e7196964
        logs/a.sh.e7198565
        logs/a.sh.e7199583
        logs/a.sh.e7206711
        logs/a.sh.o7196964
        logs/a.sh.o7198565
        logs/a.sh.o7199583
        logs/a.sh.o7206711
        logs/collision.20121221.13h00m28s.6171.log
        logs/collisions_20170503-14h56m16s00000532ms.txt
        logs/collisions_20170503-14h56m28s000000098ms.txt
        logs/log.txt
        logs/output.20121221.13h00m28s.6171.log
        logs/properties_20170503-14h51m40s00000842ms.txt
        logs/properties_20170503-14h53m38s00000569ms.txt
        logs/properties_20170503-14h56m16s00000532ms.txt
        logs/properties_20170503-14h56m28s000000098ms.txt
        logs/properties_20170503-14h57m43s0000000009ms.txt
        logs/properties_20170517-11h59m50s00000718ms.txt
        logs/properties_20170517-12h27m31s00000959ms.txt
        logs/properties_20170517-12h29m49s00000220ms.txt
        logs/properties_20170605-13h54m41s00000381ms.txt
        logs/properties_20170605-14h02m19s00000929ms.txt
        logs/run_monee.sh.e7196963-1
        logs/run_monee.sh.e7196963-10
        logs/run_monee.sh.e7196963-11
        logs/run_monee.sh.e7196963-12
        logs/run_monee.sh.e7196963-13
        logs/run_monee.sh.e7196963-14
        logs/run_monee.sh.e7196963-15
        logs/run_monee.sh.e7196963-16
        logs/run_monee.sh.e7196963-17
        logs/run_monee.sh.e7196963-18
        logs/run_monee.sh.e7196963-19
        logs/run_monee.sh.e7196963-2
        logs/run_monee.sh.e7196963-20
        logs/run_monee.sh.e7196963-21
        logs/run_monee.sh.e7196963-22
        logs/run_monee.sh.e7196963-23
        logs/run_monee.sh.e7196963-24
        logs/run_monee.sh.e7196963-25
        logs/run_monee.sh.e7196963-26
        logs/run_monee.sh.e7196963-27
        logs/run_monee.sh.e7196963-28
        logs/run_monee.sh.e7196963-29
        logs/run_monee.sh.e7196963-3
        logs/run_monee.sh.e7196963-30
        logs/run_monee.sh.e7196963-31
        logs/run_monee.sh.e7196963-32
        logs/run_monee.sh.e7196963-33
        logs/run_monee.sh.e7196963-34
        logs/run_monee.sh.e7196963-35
        logs/run_monee.sh.e7196963-36
        logs/run_monee.sh.e7196963-37
        logs/run_monee.sh.e7196963-38
        logs/run_monee.sh.e7196963-39
        logs/run_monee.sh.e7196963-4
        logs/run_monee.sh.e7196963-40
        logs/run_monee.sh.e7196963-41
        logs/run_monee.sh.e7196963-42
        logs/run_monee.sh.e7196963-43
        logs/run_monee.sh.e7196963-44
        logs/run_monee.sh.e7196963-45
        logs/run_monee.sh.e7196963-46
        logs/run_monee.sh.e7196963-47
        logs/run_monee.sh.e7196963-48
        logs/run_monee.sh.e7196963-49
        logs/run_monee.sh.e7196963-5
        logs/run_monee.sh.e7196963-50
        logs/run_monee.sh.e7196963-51
        logs/run_monee.sh.e7196963-52
        logs/run_monee.sh.e7196963-53
        logs/run_monee.sh.e7196963-54
        logs/run_monee.sh.e7196963-55
        logs/run_monee.sh.e7196963-56
        logs/run_monee.sh.e7196963-6
        logs/run_monee.sh.e7196963-7
        logs/run_monee.sh.e7196963-8
        logs/run_monee.sh.e7196963-9
        logs/run_monee.sh.e7198564-1
        logs/run_monee.sh.e7198564-10
        logs/run_monee.sh.e7198564-11
        logs/run_monee.sh.e7198564-12
        logs/run_monee.sh.e7198564-13
        logs/run_monee.sh.e7198564-14
        logs/run_monee.sh.e7198564-15
        logs/run_monee.sh.e7198564-16
        logs/run_monee.sh.e7198564-2
        logs/run_monee.sh.e7198564-3
        logs/run_monee.sh.e7198564-4
        logs/run_monee.sh.e7198564-5
        logs/run_monee.sh.e7198564-6
        logs/run_monee.sh.e7198564-7
        logs/run_monee.sh.e7198564-8
        logs/run_monee.sh.e7198564-9
        logs/run_monee.sh.e7199582-1
        logs/run_monee.sh.e7199582-2
        logs/run_monee.sh.e7199582-3
        logs/run_monee.sh.e7199582-4
        logs/run_monee.sh.e7199582-5
        logs/run_monee.sh.e7199582-6
        logs/run_monee.sh.e7199582-7
        logs/run_monee.sh.e7199582-8
        logs/run_monee.sh.e7206599-1
        logs/run_monee.sh.e7206599-2
        logs/run_monee.sh.e7206599-3
        logs/run_monee.sh.e7206599-4
        logs/run_monee.sh.e7206599-5
        logs/run_monee.sh.e7206599-6
        logs/run_monee.sh.e7206599-7
        logs/run_monee.sh.e7206599-8
        logs/run_monee.sh.e7206710-1
        logs/run_monee.sh.e7206710-2
        logs/run_monee.sh.e7206710-3
        logs/run_monee.sh.e7206710-4
        logs/run_monee.sh.e7206710-5
        logs/run_monee.sh.e7206710-6
        logs/run_monee.sh.e7206710-7
        logs/run_monee.sh.e7206710-8
        logs/run_monee.sh.o7196963-1
        logs/run_monee.sh.o7196963-10
        logs/run_monee.sh.o7196963-11
        logs/run_monee.sh.o7196963-12
        logs/run_monee.sh.o7196963-13
        logs/run_monee.sh.o7196963-14
        logs/run_monee.sh.o7196963-15
        logs/run_monee.sh.o7196963-16
        logs/run_monee.sh.o7196963-17
        logs/run_monee.sh.o7196963-18
        logs/run_monee.sh.o7196963-19
        logs/run_monee.sh.o7196963-2
        logs/run_monee.sh.o7196963-20
        logs/run_monee.sh.o7196963-21
        logs/run_monee.sh.o7196963-22
        logs/run_monee.sh.o7196963-23
        logs/run_monee.sh.o7196963-24
        logs/run_monee.sh.o7196963-25
        logs/run_monee.sh.o7196963-26
        logs/run_monee.sh.o7196963-27
        logs/run_monee.sh.o7196963-28
        logs/run_monee.sh.o7196963-29
        logs/run_monee.sh.o7196963-3
        logs/run_monee.sh.o7196963-30
        logs/run_monee.sh.o7196963-31
        logs/run_monee.sh.o7196963-32
        logs/run_monee.sh.o7196963-33
        logs/run_monee.sh.o7196963-34
        logs/run_monee.sh.o7196963-35
        logs/run_monee.sh.o7196963-36
        logs/run_monee.sh.o7196963-37
        logs/run_monee.sh.o7196963-38
        logs/run_monee.sh.o7196963-39
        logs/run_monee.sh.o7196963-4
        logs/run_monee.sh.o7196963-40
        logs/run_monee.sh.o7196963-41
        logs/run_monee.sh.o7196963-42
        logs/run_monee.sh.o7196963-43
        logs/run_monee.sh.o7196963-44
        logs/run_monee.sh.o7196963-45
        logs/run_monee.sh.o7196963-46
        logs/run_monee.sh.o7196963-47
        logs/run_monee.sh.o7196963-48
        logs/run_monee.sh.o7196963-49
        logs/run_monee.sh.o7196963-5
        logs/run_monee.sh.o7196963-50
        logs/run_monee.sh.o7196963-51
        logs/run_monee.sh.o7196963-52
        logs/run_monee.sh.o7196963-53
        logs/run_monee.sh.o7196963-54
        logs/run_monee.sh.o7196963-55
        logs/run_monee.sh.o7196963-56
        logs/run_monee.sh.o7196963-6
        logs/run_monee.sh.o7196963-7
        logs/run_monee.sh.o7196963-8
        logs/run_monee.sh.o7196963-9
        logs/run_monee.sh.o7198564-1
        logs/run_monee.sh.o7198564-10
        logs/run_monee.sh.o7198564-11
        logs/run_monee.sh.o7198564-12
        logs/run_monee.sh.o7198564-13
        logs/run_monee.sh.o7198564-14
        logs/run_monee.sh.o7198564-15
        logs/run_monee.sh.o7198564-16
        logs/run_monee.sh.o7198564-2
        logs/run_monee.sh.o7198564-3
        logs/run_monee.sh.o7198564-4
        logs/run_monee.sh.o7198564-5
        logs/run_monee.sh.o7198564-6
        logs/run_monee.sh.o7198564-7
        logs/run_monee.sh.o7198564-8
        logs/run_monee.sh.o7198564-9
        logs/run_monee.sh.o7199582-1
        logs/run_monee.sh.o7199582-2
        logs/run_monee.sh.o7199582-3
        logs/run_monee.sh.o7199582-4
        logs/run_monee.sh.o7199582-5
        logs/run_monee.sh.o7199582-6
        logs/run_monee.sh.o7199582-7
        logs/run_monee.sh.o7199582-8
        logs/run_monee.sh.o7206599-1
        logs/run_monee.sh.o7206599-2
        logs/run_monee.sh.o7206599-3
        logs/run_monee.sh.o7206599-4
        logs/run_monee.sh.o7206599-5
        logs/run_monee.sh.o7206599-6
        logs/run_monee.sh.o7206599-7
        logs/run_monee.sh.o7206599-8
        logs/run_monee.sh.o7206710-1
        logs/run_monee.sh.o7206710-2
        logs/run_monee.sh.o7206710-3
        logs/run_monee.sh.o7206710-4
        logs/run_monee.sh.o7206710-5
        logs/run_monee.sh.o7206710-6
        logs/run_monee.sh.o7206710-7
        logs/run_monee.sh.o7206710-8
        prj/SimpleShells/include/SimpleShellsAgentObserver.h
        prj/SimpleShells/include/SimpleShellsAgentWorldModel.h
        prj/SimpleShells/include/SimpleShellsControlArchitecture.h
        prj/SimpleShells/include/SimpleShellsWorldObserver.h
        prj/SimpleShells/src/SimpleShellsAgentObserver.cpp
        prj/SimpleShells/src/SimpleShellsAgentObserver.o
        prj/SimpleShells/src/SimpleShellsAgentWorldModel.cpp
        prj/SimpleShells/src/SimpleShellsAgentWorldModel.o
        prj/SimpleShells/src/SimpleShellsControlArchitecture.cpp
        prj/SimpleShells/src/SimpleShellsControlArchitecture.o
        prj/SimpleShells/src/SimpleShellsWorldObserver.cpp
        prj/SimpleShells/src/SimpleShellsWorldObserver.o
        scripts/obsolete/lisa_run-nomarket.sh
        scripts/obsolete/lisa_run.sh
        scripts/obsolete/run_monee.sh
        scripts/collisions.sh
        scripts/moments-per-line.awk
        scripts/monee.sh
        scripts/pucks.sh
        scripts/run_monee.sh
        scripts/settings
        src/contrib/newscast/HiveMindInstance.cpp
        src/contrib/newscast/HiveMindInstance.o
        src/contrib/newscast/NewscastAgent.cpp
        src/contrib/newscast/NewscastAgent.o
        src/contrib/newscast/NewscastAgentGroup.cpp
        src/contrib/newscast/NewscastAgentGroup.o
        src/contrib/newscast/NewscastInstance.cpp
        src/contrib/newscast/NewscastInstance.o
        src/contrib/newscast/NewsContent.cpp
        src/contrib/newscast/NewsContent.o
        src/contrib/newscast/NewsItem.cpp
        src/contrib/newscast/NewsItem.o
        src/contrib/newscast/PopulationControlArchitecture.cpp
        src/contrib/newscast/PopulationControlArchitecture.o
        src/contrib/newscast/PopulationMember.cpp
        src/contrib/newscast/PopulationMember.o
        src/contrib/Organism.cpp
        src/contrib/Organism.o
        src/contrib/Properties.cpp
        src/contrib/Properties.o
        src/contrib/SDL_collide.cpp
        src/contrib/SDL_collide.o
        src/contrib/StringUtils.cpp
        src/contrib/StringUtils.o
        src/core/Agent.cpp
        src/core/Agent.o
        src/core/AgentObserver.cpp
        src/core/AgentObserver.o
        src/core/BehaviorControlArchitecture.cpp
        src/core/BehaviorControlArchitecture.o
        src/core/ConfigurationLoader.cpp
        src/core/ConfigurationLoader.o
        src/core/ExtendedProperties.cpp
        src/core/ExtendedProperties.o
        src/core/InspectorAgent.cpp
        src/core/InspectorAgent.o
        src/core/LogManager.cpp
        src/core/LogManager.o
        src/core/main.cpp
        src/core/main.o
        src/core/Misc.cpp
        src/core/Misc.o
        src/core/Observer.cpp
        src/core/Observer.o
        src/core/roborobo.cpp
        src/core/roborobo.o
        src/core/RobotAgent.cpp
        src/core/RobotAgent.o
        src/core/RobotAgentWorldInterface.cpp
        src/core/RobotAgentWorldInterface.o
        src/core/RobotAgentWorldModel.cpp
        src/core/RobotAgentWorldModel.o
        src/core/SDL_gfxPrimitives.c
        src/core/SDL_gfxPrimitives.o
        src/core/SDL_gfxPrimitivesExtra.cpp
        src/core/SDL_gfxPrimitivesExtra.o
        src/core/SDL_gfxRoborobo.cpp
        src/core/SDL_gfxRoborobo.o
        src/core/Timer.cpp
        src/core/Timer.o
        src/core/World.cpp
        src/core/World.o
        src/core/WorldModel.cpp
        src/core/WorldModel.o
        src/core/WorldObserver.cpp
        src/core/WorldObserver.o
        src/ext/rjh/DifferentialControlArchitecture.cpp
        src/ext/rjh/DifferentialControlArchitecture.o
        src/ext/rjh/EvolutionaryControlArchitecture.cpp
        src/ext/rjh/EvolutionaryControlArchitecture.o
        src/ext/Utils/Controller.cpp
        src/ext/Utils/Controller.o
        src/ext/Utils/NeuralController.cpp
        src/ext/Utils/NeuralController.o
        src/ext/Utils/Rand.cpp
        src/ext/Utils/Rand.o
        src/ext/Utils/Util.cpp
        src/ext/Utils/Util.o
        src/ext/EvolvingRobotAgentWorldModel.cpp
        src/ext/EvolvingRobotAgentWorldModel.o
        src/ext/EvolvingRobotAgentWorldModelDangerWorld.cpp
        src/ext/EvolvingRobotAgentWorldModelDangerWorld.o
        src/ext/PerceptronBehaviorControlArchitecture.cpp
        src/ext/PerceptronBehaviorControlArchitecture.o
        src/ext/PropertiesReadingConfigurationLoader.cpp
        src/ext/PropertiesReadingConfigurationLoader.o
        src/ext/Puck.cpp
        src/ext/Puck.o
        src/ext/PuckGen.cpp
        src/ext/PuckGen.o
        src/ext/RangeSensor.cpp
        src/ext/RangeSensor.o
        src/ext/RobotAgentWorldInterfaceDangerWorld.cpp
        src/ext/RobotAgentWorldInterfaceDangerWorld.o
        src/ext/SimpleShellsConfigurationLoader.cpp
        src/ext/SimpleShellsConfigurationLoader.o
        template/TwoColours-NoMarket.properties
        template/TwoColours.closerange.properties
        template/TwoColours.largespread.properties
        template/TwoColours.longegg.properties
        template/TwoColours.properties
        template/TwoColours.uneven.properties
        tmp/a.out
        tmp/foo.cpp
        .cproject
        foo
        goRoborobo
        Makefile
        Makefile.old
        roborobo
        RoboRobo.iml
        roborobo_Prefix.pch
        run_gprof.sh
        run_valgrind.sh
        SDLMain.h
        SDLMain.m
        submit.sh
        TODO)

add_executable(RoboRobo ${SOURCE_FILES})